solved overflow on bottom digits of the screen by limiting string length

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,6 @@
   
 }
 #display{
-  float: right;
   font-size: 150%;
   margin-top: 10%;
   text-align: right;
